[package]
name = "rs_poker"
version = "4.1.0"
authors = ["Elliott Clark <eclark@apache.org>"]
keywords = ["cards", "poker"]
categories = ["games"]
homepage = "https://docs.rs/rs_poker"
repository = "https://github.com/elliottneilclark/rs-poker"
description = "A library to help with any Rust code dealing with poker. This includes card values, suits, hands, hand ranks, 5 card hand strength calculation, 7 card hand strength calulcation, and monte carlo game simulation helpers."
readme = "README.md"
license = "Apache-2.0"
edition = "2024"

[dependencies]
rand = { version = "~0.9.1", features = ["small_rng"] }
thiserror = "~2.0.12"
serde = { version = "1.0.219", optional = true, features = ["derive"] }
serde_json = { version = "~1.0.140", optional = true }
arbitrary = { version = "~1.4.1", optional = true, features = ["derive"] }
tracing = { version = "~0.1.41", optional = true, features = [
  "release_max_level_info",
] }
approx = { version = "~0.5.1", optional = true }
little-sorry = { version = "~2.0.0", optional = true, features = [] }
chrono = { version = "~0.4.41", optional = true, features = ["serde"] }
itertools = { version = "~0.14.0", optional = true }
rayon = { version = "~1.10", optional = true }
parking_lot = { version = "~0.12", optional = true }

[dev-dependencies]
criterion = "~0.6.0"
tracing-subscriber = { version = "~0.3.20", default-features = true, features = [
  "env-filter",
  "fmt",
  "json",
] }
env_logger = { version = "~0.11.8" }
approx = { version = "~0.5.1" }
tempfile = "~3.20.0"
clap = { version = "~4.5", features = ["derive"] }
rayon = "~1.10"

[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
tikv-jemallocator = { version = "~0.6.0", features = [
  "profiling",
  "unprefixed_malloc_on_supported_platforms",
] }

[features]
default = ["arena", "serde"]
serde = ["dep:serde", "dep:serde_json"]
arena = [
  "dep:tracing",
  "dep:little-sorry",
  "dep:itertools",
  "dep:approx",
  "dep:rayon",
  "dep:parking_lot",
]
arena-comparison = ["arena", "open-hand-history"]
arena-test-util = ["arena", "dep:approx"]
open-hand-history = ["serde", "dep:chrono", "dep:approx"]
open-hand-history-test-util = ["open-hand-history"]

[[bench]]
name = "arena"
harness = false
required-features = ["arena"]

[[bench]]
name = "monte_carlo_game"
harness = false

[[bench]]
name = "holdem_starting_hand"
harness = false

[[bench]]
name = "iter"
harness = false

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "rank"
harness = false

[[bench]]
name = "icm_sim"
harness = false

[[bench]]
name = "deal_deck"
harness = false

[[bench]]
name = "cfr"
harness = false
required-features = ["arena"]

[[bench]]
name = "node_arena"
harness = false
required-features = ["arena"]

[[example]]
name = "agent_comparison"
required-features = ["arena-comparison"]

[profile.release]
debug = "line-tables-only"
lto = true
